--- a/package.json
+++ b/package.json
@@ -1,24 +1,46 @@
 {
   "name": "front-pos",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng s -o --port 3001",
+    "start1": "ng s -o --port 3002 -c=desa",
+    "start2": "ng s -o --port 3001 -c=production",
+    "start3": "ng s -o --port 3001 -c=qa",
+    "start4": "ng s -o --port 3001 -c=cert",
+    "bdesa": "ng b --prod -c desa",
+    "bcert": "ng b --prod -c cert",
+    "bprod": "ng b --prod -c production",
+    "test": "ng test",
+    "lint": "ng lint",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "watch": "ng build --watch --configuration development"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.2.0",
+    "@angular/cdk": "^13.2.0",
     "@angular/common": "~13.2.0",
     "@angular/compiler": "~13.2.0",
     "@angular/core": "~13.2.0",
     "@angular/forms": "~13.2.0",
+    "@angular/material": "^13.3.9",
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@ng-select/ng-select": "^8.3.0",
+    "@stomp/stompjs": "^6.1.2",
+    "jquery": "^3.6.0",
+    "moment": "^2.29.4",
+    "net": "^1.0.2",
+    "ng-block-ui": "^3.0.2",
+    "ngx-bootstrap": "^9.0.0",
+    "ngx-toastr": "^14.3.0",
+    "rx-angular": "^1.1.3",
     "rxjs": "~7.5.0",
+    "sockjs": "^0.3.24",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -26,8 +48,11 @@
     "@angular-devkit/build-angular": "~13.2.5",
     "@angular/cli": "~13.2.5",
     "@angular/compiler-cli": "~13.2.0",
+    "@angular/language-service": "^13.3.11",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "@types/sockjs-client": "^1.5.1",
+    "@types/stompjs": "^2.3.5",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
