--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
     "@ng-select/ng-select": "^8.3.0",
-    "@stomp/stompjs": "^6.1.2",
+    "@types/sockjs": "^0.3.33",
     "jquery": "^3.6.0",
     "moment": "^2.29.4",
     "net": "^1.0.2",
@@ -32,11 +32,9 @@
     "ngx-toastr": "^14.3.0",
     "rx-angular": "^1.1.3",
     "rxjs": "~7.5.0",
-    "sockjs": "^0.3.24",
-    "sockjs-client": "^1.6.1",
+    "sockjs-client": "^1.3.0",
     "stompjs": "^2.3.3",
     "tslib": "^2.3.0",
-    "websocket": "^1.0.34",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
